Fix Chrome display chat and scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,3 +7,7 @@
 @import 'form';
 @import 'transitions';
 @import 'fonts';
+
+:root {
+  color-scheme: dark;
+}
